--- a/panelweb/WebContent/WEB-INF/web.xml
+++ b/panelweb/WebContent/WEB-INF/web.xml
@@ -2,6 +2,11 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>Panel-WAR</display-name>
   
+		  <!--context-param>
+		    <param-name>log4jConfigLocation</param-name>
+		    <param-value>/WEB-INF/classes/log4j.properties</param-value>
+		</context-param-->
+  
           <!-- Spring Security Facelets Tag Library -->
         <context-param>
             <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
