--- a/panelweb/WebContent/WEB-INF/classes/log4j.properties
+++ b/panelweb/WebContent/WEB-INF/classes/log4j.properties
@@ -3,9 +3,23 @@ log4j.rootLogger=DEBUG, R
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.consoleAppender.layout.ConversionPattern = %d %i - %m - %X{user-id}%n
 #log4j.appender.R.File=/Users/manuelgarcia/Oracle/Middleware/Oracle_Home/user_projects/domains/wsg/wsg-war/logs/wsg-war.log4j.log
 log4j.appender.R.File=/log4j-application.log
 log4j.appender.R.MaxFileSize=300MB
 log4j.appender.R.MaxBackupIndex=3
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=[%d{dd/MM/yyyy HH:mm:ss.SSS}][%p][%c][%X{sid}][%M] - %m%n
+#log4j.appender.R.layout.ConversionPattern=[%d{dd/MM/yyyy HH:mm:ss.SSS}][%p][%c][%X{sid}][%M] - %m%n
+log4j.appender.R.layout.ConversionPattern = [%d{dd/MM/yyyy HH:mm:ss.SSS}][%p][%c][%X{sid}][%M] - %m%n %-4r [%t] %5p %c %x - %m - %X{userName}%n
+
+
+# sample log4j.properties file, explaining log4j MDC concept
+# author: veerasundar.com/blog
+
+#log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
+#log4j.appender.consoleAppender.layout = org.apache.log4j.PatternLayout
+
+#note the %X{userName} - this is how you fetch data from Mapped Diagnostic Context (MDC)
+#log4j.appender.consoleAppender.layout.ConversionPattern = %-4r [%t] %5p %c %x - %m - %X{userName}%n
+
+#log4j.rootLogger = DEBUG, consoleAppender
