--- a/panelweb/WebContent/WEB-INF/classes/log4j.properties
+++ b/panelweb/WebContent/WEB-INF/classes/log4j.properties
@@ -4,8 +4,8 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.consoleAppender.layout.ConversionPattern = %d %i - %m - %X{user-id}%n
-#log4j.appender.R.File=/Users/manuelgarcia/Oracle/Middleware/Oracle_Home/user_projects/domains/wsg/wsg-war/logs/wsg-war.log4j.log
-log4j.appender.R.File=/log4j-application.log
+#log4j.appender.R.File=/Users/manuelgarcia/2014/log4j-application.log
+log4j.appender.R.File=/2014/log4j-application.log
 log4j.appender.R.MaxFileSize=300MB
 log4j.appender.R.MaxBackupIndex=3
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
